Update and rename music.css to music1.css

--- a/music1.css
+++ b/music1.css
@@ -32,7 +32,7 @@ header a, a:visited {
     width: 400px;
 }
 .player {
-    background: transparent url("images/spr.png") no-repeat scroll center top;
+    background: transparent url("https://4.bp.blogspot.com/-sE155LwXRV4/WYw7m0O2iEI/AAAAAAAAAi0/TQlFFGed6cwHQtRAwPtsKZbrj0yZNTEKgCLcBGAs/s1600/spr.png") no-repeat scroll center top;
     height: 162px;
     position: relative;
     width: 326px;
@@ -59,7 +59,7 @@ header a, a:visited {
     top: 40px;
 }
 .pl {
-    background: transparent url("images/spr.png") no-repeat scroll -274px -175px;
+    background: transparent url("https://4.bp.blogspot.com/-sE155LwXRV4/WYw7m0O2iEI/AAAAAAAAAi0/TQlFFGed6cwHQtRAwPtsKZbrj0yZNTEKgCLcBGAs/s1600/spr.png") no-repeat scroll -274px -175px;
     cursor: pointer;
     height: 34px;
     left: 270px;
@@ -71,7 +71,7 @@ header a, a:visited {
     top: 21px;
 }
 .cover {
-    background: transparent url(data/cover1.jpg) no-repeat scroll center top;
+    background: transparent url() no-repeat scroll center top;
     border-radius: 5px 5px 5px 5px;
     height: 94px;
     left: 20px;
@@ -88,7 +88,7 @@ header a, a:visited {
     width: 138px;
 }
 .controls .play, .controls .pause, .controls .rew, .controls .fwd {
-    background: transparent url("images/spr.png") no-repeat scroll 0 0;
+    background: transparent url("https://4.bp.blogspot.com/-sE155LwXRV4/WYw7m0O2iEI/AAAAAAAAAi0/TQlFFGed6cwHQtRAwPtsKZbrj0yZNTEKgCLcBGAs/s1600/spr.png") no-repeat scroll 0 0;
     float: left;
     height: 100%;
     width: 33%;
@@ -139,7 +139,7 @@ header a, a:visited {
     width: 285px;
 }
 .ui-slider-range {
-    background: transparent url("images/spr.png") no-repeat scroll 5px -222px;
+    background: transparent url("https://4.bp.blogspot.com/-sE155LwXRV4/WYw7m0O2iEI/AAAAAAAAAi0/TQlFFGed6cwHQtRAwPtsKZbrj0yZNTEKgCLcBGAs/s1600/spr.png") no-repeat scroll 5px -222px;
     height: 100%;
     position: absolute;
     top: 0;
@@ -154,7 +154,7 @@ header a, a:visited {
     z-index: 2;
 }
 .volume .ui-slider-handle {
-    background: url("images/spr.png") no-repeat scroll -201px -188px rgba(0, 0, 0, 0);
+    background: url("https://4.bp.blogspot.com/-sE155LwXRV4/WYw7m0O2iEI/AAAAAAAAAi0/TQlFFGed6cwHQtRAwPtsKZbrj0yZNTEKgCLcBGAs/s1600/spr.png") no-repeat scroll -201px -188px rgba(0, 0, 0, 0);
     height: 13px;
     width: 13px;
 }
